--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   cached_network_image: ^3.1.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
